# velodep

./: .gitignore  CMakeLists.txt  LICENSE  README.md  __frac_aperture.py  __functions.py  __init__.py  __load_dll.py  __rsf.py  functions.py
Example/: example.ipynb
include/: c_api.h  export_import.h  frac_aperture.h  frac_aperture_impl.h  rsf_tau_chg.h  rsf_tau_chg_impl.h  rsf_tau_fix.h  rsf_tau_fix_impl.h
src/: c_api.cpp  frac_aperture.cpp  frac_aperture_impl.cpp  rsf_tau_chg.cpp  rsf_tau_chg_impl.cpp  rsf_tau_fix.cpp  rsf_tau_fix_impl.cpp
